rhai/codegen/ui_tests/rhai_fn_setter_return.stderr
error: property setter cannot return any value
  --> $DIR/rhai_fn_setter_return.rs:13:51
   |
13 |     pub fn test_fn(input: &mut Point, value: f32) -> bool {
   |                                                   ^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_setter_return.rs:24:8
   |
24 |     if test_module::test_fn(&mut n, 5.0) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
